# burn_fm

./: .gitignore  2  Cargo.toml  README.md  TODO.md  Tasks.fmp12  blank.header  burn.example  burn_spec.md  diff  empty2  example.burn  example.fmp12  example.fmp12.fmp12  fmp_format.md  header1  header2  log  quotes_diff2  t1  t2  tasks.decompl  tasks.header  test  test.fmp12  test2  test_compile  test_decompile  test_decompile_relationships  testing.md
doc/: example.burn  example.fmp12  fmp_format.md
scripts/: aggregate_segments.py  decode_2byte_string.py  decode_all_strings.py  decode_fmstring.py  decode_int.py  script_instruction_gen.py
src/: chunk.rs  cli.rs  component.rs  dbcharconv.rs  encoding_util.rs  file.rs  main.rs  metadata_constants.rs
src/burn_script/: compiler.rs  lexer.rs  mod.rs  parser.rs  tokens.rs
src/compile/: assembler.rs  compiler.rs  compound_chunk.rs  header.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/decompile/: chunk.rs  decompiler.rs  encoding_util.rs  format.rs  mod.rs  script_engine_instructions.rs  sector.rs
src/fm_script_engine/: fm_script_engine_instructions.rs  mod.rs
src/script_engine/: mod.rs  script_engine.rs  script_engine_instructions.rs
src/testing/: calc_eval.rs  calc_tokens.rs  database.rs  layout_mgr.rs  mod.rs  relation_mgr.rs  test.rs  test_environment_instance.rs  virtual_machine.rs
tests/: decompile_test.rs
tests/input/: blank.fmp12  blank_tests.burn
