[package]
name = "burn_fm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["cargo", "derive"] }
color-print = "0.3.6"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.117"
